- Artículos ahora indica el tiempo de preparación en minutos como indica el caso práctico. - Correcciones diversas en todos los métodos para aceptar el nuevo tipo de dato. - Correcciones en la forma de visualizar y listar diversos datos relativos a pedidos. - Otras tantas correcciones de diversa consideración que ya ni recuerdo. - Últimas correcciones durante grabación.